--- a/package.json
+++ b/package.json
@@ -10,5 +10,13 @@
   "license": "ISC",
   "devDependencies": {
     "prettier": "^1.15.3"
-  }
+  },
+  "prettier": {
+    "printWidth": 120,
+    "tabWidth": 4,
+    "useTabs": false,
+    "semi": true,
+    "singleQuote": true,
+    "trailingComma": "none"
+    }
 }
